# kinneret

Confwiz32/: Confwiz32.aps  Confwiz32.cpp  Confwiz32.dsp  Confwiz32.dsw  Confwiz32.opt  Confwiz32.plg  Confwiz32.rc  ReadMe.txt  StdAfx.cpp  resource.h
boot-floppy/KNOPPIX/: knoppix.sh
boot-floppy/Source/: About.dfm  About.pas  ActiveIMM_TLB.pas  Advanced.dfm  Advanced.pas  BinFile.pas  BlockDev.pas  DiskIO.pas  ParInstall.dfm  ParInstall.pas  (+43 more)
boot-image/: README  boot.msg  f2  logo.16  syslinux.cfg  vmlinuz
cd-info/: Kinneret_Release_Notes.kwd  README  ccs.sh  swim_old
confwiz/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.status  configure  configure.in  configure.in.in  confwiz.kdevelop  confwiz.kdevelop.pcs  confwiz.kdevprj  confwiz.kdevses  confwiz.lsm  confwiz.pro  helpscreen.kwd  helptext.txt  libtool  subdirs
confwiz/confwiz/: Makefile  Makefile.am  Makefile.in  configwizard.ui  configwizard.ui.h  confwiz.cpp  confwiz.desktop  confwiz.h  dirview.cpp  dirview.h  help.ui  main.cpp  pleasewait.ui  pleasewait.ui.h
confwiz/confwiz/.deps/: configwizard.P  configwizard.Po  confwiz.P  confwiz.Po  confwiz.moc.P  confwiz.moc.Po  dirview.P  dirview.Po  dirview.moc.P  dirview.moc.Po  help.P  help.Po  main.P  main.Po  pleasewait.P  pleasewait.Po
confwiz/scripts/: Makefile  Makefile.am  Makefile.in  config.sh  findfonts.sh  knoppix.sh  ttf.sh
docs/: History of Linux.kwd  bookmarks.xml  kinneret_newcomers.kwd
homepage/: about-ar.html  about-en.html  about-he.html  download-en.php  download.php  download06-en.php  download06.php  download06MD5-en.php  download06MD5.php  download2-en.php  download2.php  download3-en.php  download3.php  index-ar.html  index-en.htm  index-en.html  index-he.htm  index-ru.html  index.html  kbruch-he.html  kpercentage-he.html  support-he.html  useage-he.html
idial/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.in  configure.in.in  idial.kdevprj  idial.kdevses  idial.lsm  idial.pro  libtool  subdirs
internet/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  internet.kdevprj  internet.kdevses  internet.lsm  libtool  subdirs
internet-ng/: AUTHORS  Doxyfile  Makefile.am  README  TODO  acinclude.m4  aclocal.m4  configure.in
internet-ng/database/: test.conf
internet-ng/database/connections/: connection.xml
internet-ng/database/drivers/: ale.xml  generic-cable.xml  generic-pppoe-adsl.xml  generic-pppoe.xml  generic-pptp-adsl.xml  generic-pptp-cable.xml  generic-pptp.xml
internet-ng/database/isps/: isp.xml
internet-ng/database/resolvers/: auth.xml  driver.xml  isp.xml
internet-ng/database/schemas/: connections.xsd  drivers.xsd  isps.xsd  matcher.xsd  resolvers.xsd  types.xsd
internet-ng/database/scripts/: common  do-dhcp  generic-pptp-cable  generic-pptp-cable.dis  generic-pptp.dis  matcher.xml
internet-ng/src/: Makefile.am  dummy.cpp  main.cpp
internet-ng/src/core/: ConnectionDescriptor.h  Makefile.am  Resolver.h
internet-ng/src/core/exception/: Makefile.am  exception.h
internet-ng/src/core/modules/: ISP.h  Module.h
internet-ng/src/core/resolvers/: Makefile.am  Resolver.cpp  Resolver.h
internet-ng/src/core/utils/: Config.cpp  Config.h  Log.cpp  Log.h  Makefile.am  utils.cpp  utils.h  xts.cpp  xts.h
internet-ng/src/core/xml/: CoreErrorHandler.cpp  CoreErrorHandler.h  Makefile.am  XMLReadable.h  XMLSerializeable.h  XMLWriteable.h  xml.cpp  xml.h
internet-ng/src/tests/: Makefile.am
internet-ng/src/tests/core/: Makefile.am
internet-ng/src/tests/core/resolvers/: Makefile.am  ResolverTest.cpp
internet-ng/www/: index.html
internet/internet/: Makefile  Makefile.am  Makefile.in  analogmodem.cpp  authentication.cpp  authentication.h  cmdline.cpp  config.cpp  connection.cpp  connection.h  db.cpp  db.h  dialer.cpp  dialer.h  error.cpp  ethernet.cpp  hardware.cpp  hardware.h  help.cpp  help.h  info.cpp  internet.conf  internet.cpp  internet.h  isp.cpp  isp.h  lan.cpp  main.cpp  manage.cpp  mklib.sh  parse.cpp  parse.h  usb.cpp  wizard.cpp  wizard.h  xml.cpp  xml.h
internet/internet/.deps/: authentication.P  authentication.Po  cmdline.P  cmdline.Po  config.P  config.Po  connection.P  connection.Po  db.P  db.Po  dialer.P  dialer.Po  error.P  error.Po  ethernet.P  ethernet.Po  hardware.P  hardware.Po  help.P  help.Po  info.P  internet.P  isp.P  isp.Po  main.P  main.Po  manage.P  parse.P  parse.Po  usb.P  usb.Po  wizard.P  wizard.Po  xml.P  xml.Po
internet/internet/docs/: Makefile  Makefile.in
internet/internet/docs/en/: Makefile  Makefile.in  index.sgml
internet_db/: ChangeLog
iwiz/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.status  configure  configure.in  configure.in.in  iwiz.kdevprj  iwiz.kdevses  iwiz.lsm  iwiz.pro  libtool  subdirs
iwiz/iwiz/: Makefile  Makefile.am  Makefile.in  iwiz.cpp  iwiz.desktop  iwiz.h  iwizard.ui  iwizard.ui.h  main.cpp  rename.ui
iwiz/iwiz/.deps/: iwiz.P  iwiz.Po  iwiz.moc.P  iwizard.P  main.P  main.Po  rename.P
kinneret-remaster/: README  compressfs  dokinneret  inmaster  mkiso  repfiles  sort.mkiso
kiwiz/: kiwiz-connect.kaptn  kiwiz-disconnect.kaptn  kiwiz-info.kaptn  kiwiz-log.kaptn  kiwiz-radio.sh  kiwiz.kaptn  kiwiz.sh
knrtheme/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  configure.in.in  knrtheme.kdevprj  knrtheme.kdevses  knrtheme.lsm  subdirs
l2swim/: AUTHORS  Doxyfile  L2swim.filelist  L2swim.kdevelop  L2swim.kdevses  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  configure.in.in  l2swim.kdevprj  l2swim.kdevses  l2swim.lsm  libtool  subdirs
l2swim-docs/: CHANGELOG  MANUAL  Makefile  README  STATUS_AR  STATUS_HE
l2swim/l2swim/: Makefile  Makefile.am  Makefile.in  index.cpp  index.h  l2swim  l2swim.cpp  l2swim.desktop  l2swim.h  l2swim.moc.cpp  main.cpp
l2swim/l2swim/.deps/: index.Po  l2swim.Po  l2swim.moc.Po  main.Po
(+726 files in other folders)
