AC_INIT
AM_INIT_AUTOMAKE(internetng,0.1)
AM_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_XERCES
AC_OUTPUT(Makefile \
          src/Makefile \
          src/core/Makefile \
          src/core/resolvers/Makefile \
          src/core/utils/Makefile \
          src/core/xml/Makefile \
          src/core/exception/Makefile \
          src/tests/Makefile \
          src/tests/core/Makefile \
          src/tests/core/resolvers/Makefile \
          )
